Trigonometry: Implement triangle

--- a/trigonometry/index.html
+++ b/trigonometry/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Linear Interpolation</title>
+    <title>Trigonometry</title>
     <script src="./index.js" defer></script>
     <style>
       body {
